Add primary color tokens and remove hardcoded css values

--- a/website/src/content/docs/components/checkbox.mdx
+++ b/website/src/content/docs/components/checkbox.mdx
@@ -19,6 +19,6 @@ import { Checkbox } from "@/components/ui/checkbox";
 
 ## Examples
 
-### Default
+### With different states
 
-<ComponentPreview id="examples/checkbox-01" />
+<ComponentPreview id="examples/checkbox-02" />
