Simplify color tokens and update styles

--- a/website/src/content/docs/components/field.mdx
+++ b/website/src/content/docs/components/field.mdx
@@ -19,6 +19,6 @@ import { Field } from "@/components/ui/field";
 
 ## Examples
 
-### Default
+### With invalid state 
 
-<ComponentPreview id="examples/field-01" />
+<ComponentPreview id="examples/field-02" />
