--- a/website/src/content/docs/components/badge.mdx
+++ b/website/src/content/docs/components/badge.mdx
@@ -17,6 +17,10 @@ npx lotru@latest add ui/badge
 import { Badge } from "@/components/ui/badge";
 ```
 
+```tsx
+<Badge>Badge</Badge>
+```
+
 ## Examples
 
 ### With a different variant
