--- a/website/src/content/docs/components/button.mdx
+++ b/website/src/content/docs/components/button.mdx
@@ -17,6 +17,10 @@ npx lotru@latest add ui/button
 import { Button } from "@/components/ui/button";
 ```
 
+```tsx
+<Button variant="outline">Button</Button>
+```
+
 ## Examples
 
 ### With a different variant
