--- a/website/src/content/docs/components/checkbox.mdx
+++ b/website/src/content/docs/components/checkbox.mdx
@@ -17,6 +17,10 @@ npx lotru@latest add ui/checkbox
 import { Checkbox } from "@/components/ui/checkbox";
 ```
 
+```tsx
+<Checkbox />
+```
+
 ## Examples
 
 ### With different states
