--- a/website/src/content/docs/components/heading.mdx
+++ b/website/src/content/docs/components/heading.mdx
@@ -17,8 +17,6 @@ npx lotru@latest add ui/heading
 import { Heading } from "@/components/ui/heading";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/heading-01" />
+```tsx
+<Heading>Base UI is an open-source UI component library.</Heading>
+```
