--- a/website/src/content/docs/components/icon-button.mdx
+++ b/website/src/content/docs/components/icon-button.mdx
@@ -17,6 +17,12 @@ npx lotru@latest add ui/icon-button
 import { IconButton } from "@/components/ui/icon-button";
 ```
 
+```tsx
+<IconButton>
+  <ChevronRightIcon />
+</IconButton>
+```
+
 ## Examples
 
 ### With a different variant
