--- a/website/src/content/docs/components/input.mdx
+++ b/website/src/content/docs/components/input.mdx
@@ -17,6 +17,10 @@ npx lotru@latest add ui/input
 import { Input } from "@/components/ui/input";
 ```
 
+```tsx
+<Input />
+```
+
 ## Examples
 
 ### Default
