--- a/website/src/content/docs/components/popover.mdx
+++ b/website/src/content/docs/components/popover.mdx
@@ -14,11 +14,26 @@ npx lotru@latest add ui/popover
 ## Usage
 
 ```tsx
-import { Popover } from "@/components/ui/popover";
+import {
+  Popover,
+  PopoverArrow,
+  PopoverContent,
+  PopoverDescription,
+  PopoverPositioner,
+  PopoverTitle,
+  PopoverTrigger,
+} from "@/components/ui/popover";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/popover-01" />
+```tsx
+<Popover>
+  <PopoverTrigger>Open popover</PopoverTrigger>
+  <PopoverPositioner>
+    <PopoverContent>
+      <PopoverArrow />
+      <PopoverTitle>Popover Title</PopoverTitle>
+      <PopoverDescription>Popover Description</PopoverDescription>
+    </PopoverContent>
+  </PopoverPositioner>
+</Popover>
+```
