--- a/website/src/content/docs/components/progress.mdx
+++ b/website/src/content/docs/components/progress.mdx
@@ -17,8 +17,6 @@ npx lotru@latest add ui/progress
 import { progress } from "@/components/ui/progress";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/progress-01" />
+```tsx
+<Progress value={33} />
+```
