--- a/website/src/content/docs/components/radio.mdx
+++ b/website/src/content/docs/components/radio.mdx
@@ -17,6 +17,14 @@ npx lotru@latest add ui/radio
 import { Radio } from "@/components/ui/radio";
 ```
 
+```tsx
+<RadioGroup defaultValue="1">
+  <Radio value="1">Option 1</Radio>
+  <Radio value="2">Option 2</Radio>
+  <Radio value="3">Option 3</Radio>
+</RadioGroup>
+```
+
 ## Examples
 
 ### With different states
