--- a/website/src/content/docs/components/select.mdx
+++ b/website/src/content/docs/components/select.mdx
@@ -17,8 +17,9 @@ npx lotru@latest add ui/select
 import { Select } from "@/components/ui/select";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/select-01" />
+```tsx
+<Select defaultValue="1">
+  <option value="1">Option 1</option>
+  <option value="2">Option 2</option>
+</Select>
+```
