--- a/website/src/content/docs/components/separator.mdx
+++ b/website/src/content/docs/components/separator.mdx
@@ -17,8 +17,6 @@ npx lotru@latest add ui/separator
 import { Separator } from "@/components/ui/separator";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/separator-01" />
+```tsx
+<Separator />
+```
