--- a/website/src/content/docs/components/slider.mdx
+++ b/website/src/content/docs/components/slider.mdx
@@ -17,8 +17,6 @@ npx lotru@latest add ui/slider
 import { Slider } from "@/components/ui/slider";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/slider-01" />
+```tsx
+<Slider />
+```
