--- a/website/src/content/docs/components/switch.mdx
+++ b/website/src/content/docs/components/switch.mdx
@@ -17,8 +17,6 @@ npx lotru@latest add ui/switch
 import { Switch } from "@/components/ui/switch";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/switch-01" />
+```tsx
+<Switch />
+```
