--- a/website/src/content/docs/components/text.mdx
+++ b/website/src/content/docs/components/text.mdx
@@ -17,8 +17,6 @@ npx lotru@latest add ui/text
 import { Text } from "@/components/ui/text";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/text-01" />
+```tsx
+<Text>Base UI is an open-source UI component library.</Text>
+```
