--- a/website/src/content/docs/components/textarea.mdx
+++ b/website/src/content/docs/components/textarea.mdx
@@ -17,8 +17,6 @@ npx lotru@latest add ui/textarea
 import { Textarea } from "@/components/ui/textarea";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/textarea-01" />
+```tsx
+<Textarea />
+```
