--- a/website/src/content/docs/components/card.mdx
+++ b/website/src/content/docs/components/card.mdx
@@ -14,11 +14,20 @@ npx lotru@latest add ui/card
 ## Usage
 
 ```tsx
-import { Card } from "@/components/ui/card";
+import { Card, CardContent, CardDescription, CardFooter, CardHeader, CardTitle } from "@/components/ui/card";
 ```
 
-## Examples
-
-### Default
-
-<ComponentPreview id="examples/card-01" />
+```tsx
+<Card>
+  <CardHeader>
+    <CardTitle>Card Title</CardTitle>
+    <CardDescription>Card Description</CardDescription>
+  </CardHeader>
+  <CardContent>
+    <p>Card Content</p>
+  </CardContent>
+  <CardFooter>
+    <p>Card Footer</p>
+  </CardFooter>
+</Card>
+```
