Update popover styles

--- a/website/src/content/docs/components/popover.mdx
+++ b/website/src/content/docs/components/popover.mdx
@@ -14,15 +14,7 @@ npx lotru@latest add ui/popover
 ## Usage
 
 ```tsx
-import {
-  Popover,
-  PopoverArrow,
-  PopoverContent,
-  PopoverDescription,
-  PopoverPositioner,
-  PopoverTitle,
-  PopoverTrigger,
-} from "@/components/ui/popover";
+import { Popover, PopoverArrow, PopoverContent, PopoverPositioner, PopoverTrigger } from "@/components/ui/popover";
 ```
 
 ```tsx
@@ -31,8 +23,7 @@ import {
   <PopoverPositioner>
     <PopoverContent>
       <PopoverArrow />
-      <PopoverTitle>Popover Title</PopoverTitle>
-      <PopoverDescription>Popover Description</PopoverDescription>
+      Place content for the popover here.
     </PopoverContent>
   </PopoverPositioner>
 </Popover>
