--- a/website/src/content/docs/components/card.mdx
+++ b/website/src/content/docs/components/card.mdx
@@ -42,7 +42,14 @@ npx lotru@latest add ui/card
 ## Usage
 
 ```tsx
-import { Card, CardContent, CardDescription, CardFooter, CardHeader, CardTitle } from "@/components/ui/card";
+import {
+  Card,
+  CardContent,
+  CardDescription,
+  CardFooter,
+  CardHeader,
+  CardTitle,
+} from "@/components/ui/card";
 ```
 
 ```tsx
