--- a/website/src/content/docs/components/hover-card.mdx
+++ b/website/src/content/docs/components/hover-card.mdx
@@ -48,7 +48,12 @@ npm install @base_ui/react
 ## Usage
 
 ```tsx
-import { HoverCard, HoverCardContent, HoverCardPositioner, HoverCardTrigger } from "@/components/ui/hover-card";
+import {
+  HoverCard,
+  HoverCardContent,
+  HoverCardPositioner,
+  HoverCardTrigger,
+} from "@/components/ui/hover-card";
 ```
 
 ```tsx
