--- a/website/src/content/docs/components/popover.mdx
+++ b/website/src/content/docs/components/popover.mdx
@@ -48,7 +48,13 @@ npm install @base_ui/react
 ## Usage
 
 ```tsx
-import { Popover, PopoverArrow, PopoverContent, PopoverPositioner, PopoverTrigger } from "@/components/ui/popover";
+import {
+  Popover,
+  PopoverArrow,
+  PopoverContent,
+  PopoverPositioner,
+  PopoverTrigger,
+} from "@/components/ui/popover";
 ```
 
 ```tsx
