--- a/website/src/content/docs/components/prompt.mdx
+++ b/website/src/content/docs/components/prompt.mdx
@@ -59,7 +59,8 @@ import { Prompt } from "@/components/ui/prompt";
     <PromptHeader>
       <PromptTitle>Are you absolutely sure?</PromptTitle>
       <PromptDescription>
-        This action cannot be undone. This will permanently delete your account and remove your data from our servers.
+        This action cannot be undone. This will permanently delete your account and remove your data
+        from our servers.
       </PromptDescription>
     </PromptHeader>
     <PromptFooter>
