Add doc links and update descriptions

--- a/website/src/content/docs/components/dialog.mdx
+++ b/website/src/content/docs/components/dialog.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Dialog"
 description: "A window overlaid on either the primary window or another dialog window, rendering the content underneath inert."
+links:
+  doc: https://base-ui.com/components/react-dialog
+  api: https://base-ui.com/components/react-dialog#api-reference
 ---
 
 <ComponentPreview id="examples/dialog-01" />
