--- a/website/src/content/docs/components/dropdown-menu.mdx
+++ b/website/src/content/docs/components/dropdown-menu.mdx
@@ -1,7 +1,11 @@
 ---
 title: "Dropdown Menu"
-description: ""
+description: "Displays a menu to the user — such as a set of actions or functions — triggered by a button."
+links:
+  doc: https://base-ui.com/components/react-menu
 ---
+
+Built on top of the [`Menu`](https://base-ui.com/components/react-menu) component.
 
 <ComponentPreview id="examples/dropdown-menu-01" />
 
