--- a/website/src/content/docs/components/heading.mdx
+++ b/website/src/content/docs/components/heading.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Heading"
-description: ""
+description: "Headings are used to introduce sections of content and provide structure to a page."
 ---
 
 <ComponentPreview id="examples/heading-01" />
