--- a/website/src/content/docs/components/hover-card.mdx
+++ b/website/src/content/docs/components/hover-card.mdx
@@ -1,7 +1,11 @@
 ---
 title: "Hover Card"
-description: ""
+description: "A card that reveals additional content when hovered over."
+links:
+  doc: https://base-ui.com/components/react-tooltip
 ---
+
+Built on top of the [`Tooltip`](https://base-ui.com/components/react-tooltip) component.
 
 <ComponentPreview id="examples/hover-card-01" />
 
