--- a/website/src/content/docs/components/input.mdx
+++ b/website/src/content/docs/components/input.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Input"
-description: ""
+description: "Displays a form input field or a component that looks like an input field."
 ---
 
 <ComponentPreview id="examples/input-01" />
