--- a/website/src/content/docs/components/progress.mdx
+++ b/website/src/content/docs/components/progress.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Progress"
-description: ""
+description: "Displays an indicator showing the completion progress of a task, typically displayed as a progress bar."
+links:
+  doc: https://base-ui.com/components/react-progress
+  api: https://base-ui.com/components/react-progress#api-reference
 ---
 
 <ComponentPreview id="examples/progress-01" />
