--- a/website/src/content/docs/components/prompt.mdx
+++ b/website/src/content/docs/components/prompt.mdx
@@ -1,7 +1,12 @@
 ---
 title: "Prompt"
-description: ""
+description: "A modal dialog that interrupts the user with important content and expects a response."
+links:
+  doc: https://base-ui.com/components/react-alert-dialog
+  api: https://base-ui.com/components/react-alert-dialog#api-reference
 ---
+
+Built on top of the [`Alert Dialog`](https://base-ui.com/components/react-alert-dialog) component.
 
 <ComponentPreview id="examples/prompt-01" />
 
