--- a/website/src/content/docs/components/radio.mdx
+++ b/website/src/content/docs/components/radio.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Radio"
 description: "A control that allows the user to toggle between checked and not checked."
+links:
+  doc: https://base-ui.com/components/react-radio-group
+  api: https://base-ui.com/components/react-radio-group#api-reference
 ---
 
 <ComponentPreview id="examples/radio-01" />
