--- a/website/src/content/docs/components/separator.mdx
+++ b/website/src/content/docs/components/separator.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Separator"
-description: ""
+description: "Visually or semantically separates content."
+links:
+  doc: https://base-ui.com/components/react-separator
+  api: https://base-ui.com/components/react-separator#api-reference
 ---
 
 <ComponentPreview id="examples/separator-01" />
