--- a/website/src/content/docs/components/slider.mdx
+++ b/website/src/content/docs/components/slider.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Slider"
-description: ""
+description: "An input where the user selects a value from within a given range."
+links:
+  doc: https://base-ui.com/components/react-slider
+  api: https://base-ui.com/components/react-slider#api-reference
 ---
 
 <ComponentPreview id="examples/slider-01" />
