--- a/website/src/content/docs/components/switch.mdx
+++ b/website/src/content/docs/components/switch.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Switch"
-description: ""
+description: "A control that allows the user to toggle between checked and not checked."
+links:
+  doc: https://base-ui.com/components/react-switch
+  api: https://base-ui.com/components/react-switch#api-reference
 ---
 
 <ComponentPreview id="examples/switch-01" />
