--- a/website/src/content/docs/components/table.mdx
+++ b/website/src/content/docs/components/table.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Table"
-description: ""
+description: "A responsive table component."
 ---
 
 <ComponentPreview id="examples/table-01" />
