--- a/website/src/content/docs/components/tabs.mdx
+++ b/website/src/content/docs/components/tabs.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Tabs"
-description: ""
+description: "A set of layered sections of content—known as tab panels—that are displayed one at a time."
+links:
+  doc: https://base-ui.com/components/react-tabs
+  api: https://base-ui.com/components/react-tabs#api-reference
 ---
 
 <ComponentPreview id="examples/tabs-01" />
