--- a/website/src/content/docs/components/text.mdx
+++ b/website/src/content/docs/components/text.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Text"
-description: ""
+description: "Displays text content in various styles and sizes."
 ---
 
 <ComponentPreview id="examples/text-01" />
