--- a/website/src/content/docs/components/tooltip.mdx
+++ b/website/src/content/docs/components/tooltip.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Tooltip"
-description: ""
+description: "A popup that displays information related to an element when the element receives keyboard focus or the mouse hovers over it."
+links:
+  doc: https://base-ui.com/components/react-tooltip
+  api: https://base-ui.com/components/react-tooltip#api-reference
 ---
 
 <ComponentPreview id="examples/tooltip-01" />
