--- a/website/src/content/docs/components/checkbox.mdx
+++ b/website/src/content/docs/components/checkbox.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Checkbox"
 description: "A control that allows the user to toggle between checked and not checked."
+links:
+  doc: https://base-ui.com/components/react-checkbox
+  api: https://base-ui.com/components/react-checkbox#api-reference
 ---
 
 <ComponentPreview id="examples/checkbox-01" />
