--- a/website/src/content/docs/components/field.mdx
+++ b/website/src/content/docs/components/field.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Field"
-description: ""
+description: "Fields represent an individual section of a form containing an associated control and label, as well as any description or validation messages."
+links:
+  doc: https://base-ui.com/components/react-field
+  api: https://base-ui.com/components/react-field#api-reference
 ---
 
 <ComponentPreview id="examples/field-01" />
