--- a/website/src/content/docs/components/icon-button.mdx
+++ b/website/src/content/docs/components/icon-button.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Icon Button"
-description: ""
+description: "Displays a button or a component that looks like a button with an icon."
 ---
 
 <ComponentPreview id="examples/icon-button-01" />
