--- a/website/src/content/docs/components/popover.mdx
+++ b/website/src/content/docs/components/popover.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Popover"
-description: ""
+description: "Displays rich content in a portal, triggered by a button."
+links:
+  doc: https://base-ui.com/components/react-popover
+  api: https://base-ui.com/components/react-popover#api-reference
 ---
 
 <ComponentPreview id="examples/popover-01" />
