--- a/website/src/content/docs/components/select.mdx
+++ b/website/src/content/docs/components/select.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Select"
-description: ""
+description: "Displays a list of options for the user to pick from—triggered by a button."
 ---
 
 <ComponentPreview id="examples/select-01" />
