--- a/website/src/content/docs/components/sheet.mdx
+++ b/website/src/content/docs/components/sheet.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Sheet"
-description: "A sheet component for React."
+description: "Extends the Dialog component to display content that complements the main content of the screen."
+links:
+  doc: https://base-ui.com/components/react-dialog
+  api: https://base-ui.com/components/react-dialog#api-reference
 ---
 
 <ComponentPreview id="examples/sheet-01" />
