--- a/website/src/content/docs/components/textarea.mdx
+++ b/website/src/content/docs/components/textarea.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Textarea"
-description: ""
+description: "Displays a form textarea or a component that looks like a textarea."
 ---
 
 <ComponentPreview id="examples/textarea-01" />
