--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -1,7 +1,32 @@
 ---
 title: "Introduction"
-description: ""
+description: "Well-crafted components you can seamlessly integrate into your apps. Accessible, customizable, and open source."
 ---
 
-Lotru UI is a design system built with Base UI and Pigment CSS. It is a collection of
-components, styles, and utilities that help you build web applications.
+This is **NOT** a conventional component library. Instead, it’s a set of reusable components designed for you to integrate directly into your projects.
+
+Unlike typical libraries, there’s no installation required, and it’s not distributed via npm. You can handpick the components you need, bring the code into your project, and adapt it to match your requirements.
+
+Once the components are in your hands, they’re yours to fully customize and use as you see fit.
+
+## FAQ
+
+**How does it work?**
+
+Our components are built on top of [Base UI](https://base-ui.com) for functionality and [Pigment CSS](https://github.com/mui/pigment-css) for styling, ensuring they are both accessible and visually appealing.
+
+You can quickly integrate them into your project by copying the code and pasting it into your project.
+
+We offer a **CLI** tool to simplify the process. With the CLI, you can quickly add components to your project without manually copying the code.
+
+**Why did we build this?**
+
+We wanted to create a library that’s more flexible and easier to use than traditional component libraries. We believe that by providing you with the raw code, you can more easily integrate the components into your projects and customize them to your liking.
+
+**Can I use this in my project?**
+
+Yes! You can use these components in any project, whether it’s personal, commercial, or open-source.
+
+**Can I contribute?**
+
+Definitely! We welcome contributions from the community. If you have a component you’d like to share, please submit a pull request. We’d love to see what you’ve built!
