add Vite installation guide

--- a/website/src/content/docs/installation/manual.mdx
+++ b/website/src/content/docs/installation/manual.mdx
@@ -36,7 +36,7 @@ Configure the path aliases in your `tsconfig.json` file.
 
 <Step>Create a `theme.ts` file</Step>
 
-Create a `theme.ts` file in your project and add the following code:
+Create a `theme.ts` file in the root of your project and add the following code:
 
 ```tsx
 const theme = {
