--- a/website/src/content/docs/installation/next.mdx
+++ b/website/src/content/docs/installation/next.mdx
@@ -5,7 +5,7 @@ description: "Install and configure Next.js."
 
 <Steps>
 
-<Step>Create a project</Step>
+### Create a project
 
 Create a new Next.js project:
 
@@ -13,13 +13,13 @@ Create a new Next.js project:
 npx create-next-app@latest
 ```
 
-<Step>Add Pigment CSS</Step>
+### Add Pigment CSS
 
 Components are styled using Pigment CSS and you need to install it in your project.
 
 Follow the [Pigment CSS](https://github.com/mui/pigment-css?tab=readme-ov-file#manual-installation-1) installation instructions to get started.
 
-<Step>Initialize the CLI</Step>
+### Initialize the CLI
 
 Run the `lotru` init command to setup your project:
 
@@ -27,7 +27,7 @@ Run the `lotru` init command to setup your project:
 pnpm dlx lotru@latest init
 ```
 
-<Step>Configure `lotru.config.json`</Step>
+### Configure lotru.config.json
 
 You will be asked a few questions to configure.
 
@@ -37,7 +37,7 @@ You will be asked a few questions to configure.
 - Is your source code located in a src directory?
 ```
 
-<Step>Add your first component</Step>
+### Add your first component
 
 You can now add components to your project:
 
