--- a/website/src/content/docs/installation/vite.mdx
+++ b/website/src/content/docs/installation/vite.mdx
@@ -5,7 +5,7 @@ description: "Install and configure Vite."
 
 <Steps>
 
-<Step>Create a project</Step>
+### Create a project
 
 Create a new React project using Vite:
 
@@ -13,7 +13,7 @@ Create a new React project using Vite:
 npm create vite@latest
 ```
 
-<Step>Edit `tsconfig.app.json` file</Step>
+### Edit tsconfig.app.json file
 
 Add the following code to the `tsconfig.app.json` file to resolve paths:
 
@@ -30,13 +30,13 @@ Add the following code to the `tsconfig.app.json` file to resolve paths:
 }
 ```
 
-<Step>Add Pigment CSS</Step>
+### Add Pigment CSS
 
 Components are styled using Pigment CSS and you need to install it in your project.
 
 Follow the [Pigment CSS](https://github.com/mui/pigment-css?tab=readme-ov-file#manual-installation-1) installation instructions to get started.
 
-<Step>Initialize the CLI</Step>
+### Initialize the CLI
 
 Run the `lotru` init command to setup your project:
 
@@ -44,7 +44,7 @@ Run the `lotru` init command to setup your project:
 pnpm dlx lotru@latest init
 ```
 
-<Step>Configure `lotru.config.json`</Step>
+### Configure lotru.config.json
 
 You will be asked a few questions to configure.
 
@@ -54,7 +54,7 @@ You will be asked a few questions to configure.
 - Is your source code located in a src directory?
 ```
 
-<Step>Add your first component</Step>
+### Add your first component
 
 You can now add components to your project:
 
