--- a/website/src/content/docs/components/avatar.mdx
+++ b/website/src/content/docs/components/avatar.mdx
@@ -30,17 +30,17 @@ npx lotru@latest add ui/avatar
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+### Install the following dependencies:
 
 ```bash
 npm install @radix-ui/react-avatar
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+### Copy and paste the following code into your project.
 
 <ComponentSource id="ui/avatar" />
 
-<Step>Update the import paths to match your project setup.</Step>
+### Update the import paths to match your project setup.
 
 </Steps>
 
