--- a/website/src/content/docs/components/dropdown-menu.mdx
+++ b/website/src/content/docs/components/dropdown-menu.mdx
@@ -31,17 +31,17 @@ npx lotru@latest add ui/dropdown-menu
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+### Install the following dependencies:
 
 ```bash
 npm install @base_ui/react
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+### Copy and paste the following code into your project.
 
 <ComponentSource id="ui/dropdown-menu" />
 
-<Step>Update the import paths to match your project setup.</Step>
+### Update the import paths to match your project setup.
 
 </Steps>
 
