--- a/website/src/content/docs/components/icon-button.mdx
+++ b/website/src/content/docs/components/icon-button.mdx
@@ -27,17 +27,17 @@ npx lotru@latest add ui/icon-button
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+### Install the following dependencies:
 
 ```bash
 npm install lucide-react
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+### Copy and paste the following code into your project.
 
 <ComponentSource id="ui/icon-button" />
 
-<Step>Update the import paths to match your project setup.</Step>
+### Update the import paths to match your project setup.
 
 </Steps>
 
