--- a/website/src/content/docs/components/prompt.mdx
+++ b/website/src/content/docs/components/prompt.mdx
@@ -32,17 +32,17 @@ npx lotru@latest add ui/prompt
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+### Install the following dependencies:
 
 ```bash
 npm install @base_ui/react
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+### Copy and paste the following code into your project.
 
 <ComponentSource id="ui/prompt" />
 
-<Step>Update the import paths to match your project setup.</Step>
+### Update the import paths to match your project setup.
 
 </Steps>
 
