--- a/website/src/content/docs/components/select.mdx
+++ b/website/src/content/docs/components/select.mdx
@@ -27,11 +27,11 @@ npx lotru@latest add ui/select
 
 <Steps>
 
-<Step>Copy and paste the following code into your project.</Step>
+### Copy and paste the following code into your project.
 
 <ComponentSource id="ui/select" />
 
-<Step>Update the import paths to match your project setup.</Step>
+### Update the import paths to match your project setup.
 
 </Steps>
 
