--- a/website/src/content/docs/components/switch.mdx
+++ b/website/src/content/docs/components/switch.mdx
@@ -30,17 +30,17 @@ npx lotru@latest add ui/switch
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+### Install the following dependencies:
 
 ```bash
 npm install @base_ui/react
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+### Copy and paste the following code into your project.
 
 <ComponentSource id="ui/switch" />
 
-<Step>Update the import paths to match your project setup.</Step>
+### Update the import paths to match your project setup.
 
 </Steps>
 
