--- a/website/src/content/docs/components/text.mdx
+++ b/website/src/content/docs/components/text.mdx
@@ -27,11 +27,11 @@ npx lotru@latest add ui/text
 
 <Steps>
 
-<Step>Copy and paste the following code into your project.</Step>
+### Copy and paste the following code into your project.
 
 <ComponentSource id="ui/text" />
 
-<Step>Update the import paths to match your project setup.</Step>
+### Update the import paths to match your project setup.
 
 </Steps>
 
