--- a/website/src/content/docs/components/card.mdx
+++ b/website/src/content/docs/components/card.mdx
@@ -58,11 +58,7 @@ import {
     <CardTitle>Card Title</CardTitle>
     <CardDescription>Card Description</CardDescription>
   </CardHeader>
-  <CardContent>
-    <p>Card Content</p>
-  </CardContent>
-  <CardFooter>
-    <p>Card Footer</p>
-  </CardFooter>
+  <CardContent>Card Content</CardContent>
+  <CardFooter>Card Footer</CardFooter>
 </Card>
 ```
