update base-ui package

--- a/website/src/content/docs/components/field.mdx
+++ b/website/src/content/docs/components/field.mdx
@@ -33,7 +33,7 @@ npx lotru@latest add ui/field
 ### Install the following dependencies:
 
 ```bash
-npm install @base_ui/react
+npm install @base-ui-components/react
 ```
 
 ### Copy and paste the following code into your project.
@@ -57,9 +57,7 @@ import { Field, FieldControl, FieldDescription, FieldLabel } from "@/components/
 ```tsx
 <Field>
   <FieldLabel>Name</FieldLabel>
-  <FieldControl>
-    <input type="text" />
-  </FieldControl>
+  <FieldControl />
   <FieldDescription>We will use this name to personalize your experience.</FieldDescription>
 </Field>
 ```
