--- a/website/src/content/docs/components/radio.mdx
+++ b/website/src/content/docs/components/radio.mdx
@@ -33,7 +33,7 @@ npx lotru@latest add ui/radio
 ### Install the following dependencies:
 
 ```bash
-npm install @base_ui/react lucide-react
+npm install @base-ui-components/react lucide-react
 ```
 
 ### Copy and paste the following code into your project.
