--- a/website/src/content/docs/components/dropdown-menu.mdx
+++ b/website/src/content/docs/components/dropdown-menu.mdx
@@ -34,7 +34,7 @@ npx lotru@latest add ui/dropdown-menu
 ### Install the following dependencies:
 
 ```bash
-npm install @base_ui/react
+npm install @base-ui-components/react
 ```
 
 ### Copy and paste the following code into your project.
