--- a/website/src/content/docs/components/prompt.mdx
+++ b/website/src/content/docs/components/prompt.mdx
@@ -35,7 +35,7 @@ npx lotru@latest add ui/prompt
 ### Install the following dependencies:
 
 ```bash
-npm install @base_ui/react
+npm install @base-ui-components/react
 ```
 
 ### Copy and paste the following code into your project.
