--- a/website/src/content/docs/components/slider.mdx
+++ b/website/src/content/docs/components/slider.mdx
@@ -33,7 +33,7 @@ npx lotru@latest add ui/slider
 ### Install the following dependencies:
 
 ```bash
-npm install @base_ui/react
+npm install @base-ui-components/react
 ```
 
 ### Copy and paste the following code into your project.
