--- a/website/src/content/docs/components/select.mdx
+++ b/website/src/content/docs/components/select.mdx
@@ -42,12 +42,23 @@ npx lotru@latest add ui/select
 ## Usage
 
 ```tsx
-import { Select } from "@/components/ui/select";
+import {
+  Select,
+  SelectContent,
+  SelectItem,
+  SelectTrigger,
+  SelectValue,
+} from "@/components/ui/select";
 ```
 
 ```tsx
 <Select defaultValue="1">
-  <option value="1">Option 1</option>
-  <option value="2">Option 2</option>
+  <SelectTrigger>
+    <SelectValue />
+  </SelectTrigger>
+  <SelectContent>
+    <SelectItem value="1">Option 1</SelectItem>
+    <SelectItem value="2">Option 2</SelectItem>
+  </SelectContent>
 </Select>
 ```
