feat(docs): use accordion for faqs

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -11,22 +11,42 @@ Once the components are in your hands, they’re yours to fully customize and us
 
 ## FAQ
 
-**How does it work?**
-
+<Accordion openMultiple>
+<AccordionItem value="faq-1">
+<AccordionTrigger>
+How does it work?
+</AccordionTrigger>
+<AccordionContent>
 Our components are built on top of [Base UI](https://base-ui.com) for functionality and [Pigment CSS](https://github.com/mui/pigment-css) for styling, ensuring they are both accessible and visually appealing.
 
 You can quickly integrate them into your project by copying the code and pasting it into your project.
 
 We offer a **CLI** tool to simplify the process. With the CLI, you can quickly add components to your project without manually copying the code.
 
-**Why did we build this?**
-
+</AccordionContent>
+</AccordionItem>
+<AccordionItem value="faq-2">
+<AccordionTrigger>
+Why did we build this?
+</AccordionTrigger>
+<AccordionContent>
 We wanted to create a library that’s more flexible and easier to use than traditional component libraries. We believe that by providing you with the raw code, you can more easily integrate the components into your projects and customize them to your liking.
-
-**Can I use this in my project?**
-
+</AccordionContent>
+</AccordionItem>
+<AccordionItem value="faq-3">
+<AccordionTrigger>
+Can I use this in my project?
+</AccordionTrigger>
+<AccordionContent>
 Yes! You can use these components in any project, whether it’s personal, commercial, or open-source.
-
-**Can I contribute?**
-
+</AccordionContent>
+</AccordionItem>
+<AccordionItem value="faq-4">
+<AccordionTrigger>
+Can I contribute?
+</AccordionTrigger>
+<AccordionContent>
 Definitely! We welcome contributions from the community. If you have a component you’d like to share, please submit a pull request. We’d love to see what you’ve built!
+</AccordionContent>
+</AccordionItem>
+</Accordion>
