fix(docs): update component links

--- a/website/src/content/docs/components/dropdown-menu.mdx
+++ b/website/src/content/docs/components/dropdown-menu.mdx
@@ -2,10 +2,11 @@
 title: "Dropdown Menu"
 description: "Displays a menu to the user — such as a set of actions or functions — triggered by a button."
 links:
-  doc: https://base-ui.com/components/react-menu
+  doc: https://base-ui.com/react/components/menu
+  api: https://base-ui.com/react/components/menu#api-reference
 ---
 
-Built on top of the [`Menu`](https://base-ui.com/components/react-menu) component.
+Built on top of [`Menu`](https://base-ui.com/react/components/menu) component.
 
 <ComponentPreview id="examples/dropdown-menu-01" />
 
