--- a/website/src/content/docs/components/hover-card.mdx
+++ b/website/src/content/docs/components/hover-card.mdx
@@ -2,10 +2,11 @@
 title: "Hover Card"
 description: "A card that reveals additional content when hovered over."
 links:
-  doc: https://base-ui.com/components/react-tooltip
+  doc: https://base-ui.com/react/components/tooltip
+  api: https://base-ui.com/react/components/tooltip#api-reference
 ---
 
-Built on top of the [`Tooltip`](https://base-ui.com/components/react-tooltip) component.
+Built on top of [`Tooltip`](https://base-ui.com/react/components/tooltip) component.
 
 <ComponentPreview id="examples/hover-card-01" />
 
