--- a/website/src/content/docs/components/scroll-area.mdx
+++ b/website/src/content/docs/components/scroll-area.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Scroll Area"
 description: "Augments native scroll functionality for custom, cross-browser styling."
+links:
+  doc: https://base-ui.com/react/components/scroll-area
+  api: https://base-ui.com/react/components/scroll-area#api-reference
 ---
 
 <ComponentPreview id="examples/scroll-area-01" />
