--- a/website/src/content/docs/components/select.mdx
+++ b/website/src/content/docs/components/select.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Select"
 description: "Displays a list of options for the user to pick from—triggered by a button."
+links:
+  doc: https://base-ui.com/react/components/select
+  api: https://base-ui.com/react/components/select#api-reference
 ---
 
 <ComponentPreview id="examples/select-01" />
