--- a/website/src/content/docs/components/toggle.mdx
+++ b/website/src/content/docs/components/toggle.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Toggle"
 description: "A two-state button that can be either on or off."
+links:
+  doc: https://base-ui.com/react/components/toggle
+  api: https://base-ui.com/react/components/toggle#api-reference
 ---
 
 <ComponentPreview id="examples/toggle-01" />
