--- a/website/src/content/docs/components/accordion.mdx
+++ b/website/src/content/docs/components/accordion.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Accordion"
 description: "A vertically stacked set of interactive headings that each reveal a section of content."
+links:
+  doc: https://base-ui.com/react/components/accordion
+  api: https://base-ui.com/react/components/accordion#api-reference
 ---
 
 <ComponentPreview id="examples/accordion-01" />
