--- a/website/src/content/docs/components/sheet.mdx
+++ b/website/src/content/docs/components/sheet.mdx
@@ -2,9 +2,11 @@
 title: "Sheet"
 description: "Extends the Dialog component to display content that complements the main content of the screen."
 links:
-  doc: https://base-ui.com/components/react-dialog
-  api: https://base-ui.com/components/react-dialog#api-reference
+  doc: https://base-ui.com/react/components/dialog
+  api: https://base-ui.com/react/components/dialog#api-reference
 ---
+
+Built on top of [`Dialog`](https://base-ui.com/react/components/dialog) component.
 
 <ComponentPreview id="examples/sheet-01" />
 
