fix(docs): hide installation step title from toc

--- a/website/src/content/docs/components/scroll-area.mdx
+++ b/website/src/content/docs/components/scroll-area.mdx
@@ -30,17 +30,17 @@ npx lotru@latest add ui/scroll-area
 
 <Steps>
 
-### Install the following dependencies:
+<StepTitle>Install the following dependencies:</StepTitle>
 
 ```bash
 npm install @base-ui-components/react
 ```
 
-### Copy and paste the following code into your project.
+<StepTitle>Copy and paste the following code into your project.</StepTitle>
 
 <ComponentSource id="ui/scroll-area" />
 
-### Update the import paths to match your project setup.
+<StepTitle>Update the import paths to match your project setup.</StepTitle>
 
 </Steps>
 
