--- a/website/src/content/docs/components/select.mdx
+++ b/website/src/content/docs/components/select.mdx
@@ -30,11 +30,11 @@ npx lotru@latest add ui/select
 
 <Steps>
 
-### Copy and paste the following code into your project.
+<StepTitle>Copy and paste the following code into your project.</StepTitle>
 
 <ComponentSource id="ui/select" />
 
-### Update the import paths to match your project setup.
+<StepTitle>Update the import paths to match your project setup.</StepTitle>
 
 </Steps>
 
