--- a/website/src/content/docs/components/avatar.mdx
+++ b/website/src/content/docs/components/avatar.mdx
@@ -30,17 +30,17 @@ npx lotru@latest add ui/avatar
 
 <Steps>
 
-### Install the following dependencies:
+<StepTitle>Install the following dependencies:</StepTitle>
 
 ```bash
 npm install @radix-ui/react-avatar
 ```
 
-### Copy and paste the following code into your project.
+<StepTitle>Copy and paste the following code into your project.</StepTitle>
 
 <ComponentSource id="ui/avatar" />
 
-### Update the import paths to match your project setup.
+<StepTitle>Update the import paths to match your project setup.</StepTitle>
 
 </Steps>
 
