--- a/website/src/content/docs/components/button.mdx
+++ b/website/src/content/docs/components/button.mdx
@@ -27,17 +27,17 @@ npx lotru@latest add ui/button
 
 <Steps>
 
-### Install the following dependencies:
+<StepTitle>Install the following dependencies:</StepTitle>
 
 ```bash
 npm install lucide-react
 ```
 
-### Copy and paste the following code into your project.
+<StepTitle>Copy and paste the following code into your project.</StepTitle>
 
 <ComponentSource id="ui/button" />
 
-### Update the import paths to match your project setup.
+<StepTitle>Update the import paths to match your project setup.</StepTitle>
 
 </Steps>
 
