--- a/website/src/content/docs/components/hover-card.mdx
+++ b/website/src/content/docs/components/hover-card.mdx
@@ -32,17 +32,17 @@ npx lotru@latest add ui/hover-card
 
 <Steps>
 
-### Install the following dependencies:
+<StepTitle>Install the following dependencies:</StepTitle>
 
 ```bash
 npm install @base-ui-components/react
 ```
 
-### Copy and paste the following code into your project.
+<StepTitle>Copy and paste the following code into your project.</StepTitle>
 
 <ComponentSource id="ui/hover-card" />
 
-### Update the import paths to match your project setup.
+<StepTitle>Update the import paths to match your project setup.</StepTitle>
 
 </Steps>
 
