--- a/website/src/content/docs/components/separator.mdx
+++ b/website/src/content/docs/components/separator.mdx
@@ -30,17 +30,17 @@ npx lotru@latest add ui/separator
 
 <Steps>
 
-### Install the following dependencies:
+<StepTitle>Install the following dependencies:</StepTitle>
 
 ```bash
 npm install @base-ui-components/react
 ```
 
-### Copy and paste the following code into your project.
+<StepTitle>Copy and paste the following code into your project.</StepTitle>
 
 <ComponentSource id="ui/separator" />
 
-### Update the import paths to match your project setup.
+<StepTitle>Update the import paths to match your project setup.</StepTitle>
 
 </Steps>
 
