--- a/website/src/content/docs/components/text.mdx
+++ b/website/src/content/docs/components/text.mdx
@@ -27,11 +27,11 @@ npx lotru@latest add ui/text
 
 <Steps>
 
-### Copy and paste the following code into your project.
+<StepTitle>Copy and paste the following code into your project.</StepTitle>
 
 <ComponentSource id="ui/text" />
 
-### Update the import paths to match your project setup.
+<StepTitle>Update the import paths to match your project setup.</StepTitle>
 
 </Steps>
 
